// generate a protofile for product service?
syntax = "proto3";

package product;

option go_package = "github.com/Sri2103/services/pkg/rpc/product";

// Message defining a product.
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string images = 4;
  repeated string colors = 5;
  float price = 6;
}

// Request message for getting a product by ID.
message GetProductRequest { string id = 1; }

// Response message for getting a product by ID.
message GetProductResponse { Product product = 1; }

// Request message for listing products.
message ListProductsRequest {
  int32 page_number = 2;
  int32 results_per_page = 3;
}

message CreateProductRequest {
  Product product = 1;
  Category category = 2;
}

message CreateProductResponse { Product product = 1; }

// Response message for listing products.
message ListProductsResponse { repeated Product products = 1; }

// Request message for updating a product.
message UpdateProductRequest { Product product = 1; }

// Response message for updating a product.
message UpdateProductResponse { Product product = 1; }
// Service defining the product-related RPCs.

// Create categoryRequest
message CreateCategoryRequest { string name = 1; }

// Create categoryResponse
message CreateCategoryResponse {
  string id = 1;
  string name = 2;
}

message Category {
  string id = 1;
  string name = 2;
}

// get all categories
message GetCategoryRequest { string id = 1; }
message GetAllCategoriesRequest {}
message GetAllCategoriesResponse { repeated Category categories = 1; }

// get products by category
message GetProductsByCategoryRequest { string category_id = 1; }
message GetProductsByCategoryResponse { repeated Product products = 1; }

service ProductService {
  // Gets a product by ID.
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);

  // Lists products.
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);

  // Create product
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);

  //   Update product
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);

  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);

  rpc GetAllCategories(GetAllCategoriesRequest)
      returns (GetAllCategoriesResponse);

  rpc GetCategory(GetCategoryRequest) returns (Category);

  rpc GetProductsByCategory(GetProductsByCategoryRequest)
      returns (GetProductsByCategoryResponse);
}